--- a/css/style.css
+++ b/css/style.css
@@ -2,41 +2,76 @@
 body {
   width: 1200px;
   margin: 0 auto;
-  padding: 0;
-
   font-size: 14px;
   line-height: 21px;
   font-family: "PT Sans", "Arial", sans-serif;
   color: #000000;
   text-transform: uppercase;
-
   background-color: #f2f2f2;
+  -webkit-box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 
 a {
   text-decoration: none;
 }
 
+.btn {
+  cursor: pointer;
+}
+
 .visually-hidden {
   position: absolute;
-
   width: 1px;
   height: 1px;
   margin: -1px;
   overflow: hidden;
-
   clip: rect(0 0 0 0);
 }
 
 .page-header {
   font-weight: bold;
   line-height: 26px;
-
   background-color: #ffffff;
 }
 
+.page-header__logo {
+  margin: auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
 .page-header__menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   list-style: none;
+}
+
+.page-header__menu-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 240px;
+      flex-basis: 240px;
+  min-height: 56px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.page-header__menu-item:nth-child(2) {
+  margin-right: auto;
+}
+
+.page-header__menu-item:nth-child(3) {
+  margin-left: auto;
 }
 
 .page-header__menu-link:hover {
@@ -55,111 +90,16 @@ a {
   background-color: #ffffff;
 }
 
-/* index.html style */
-.banner {
-  background-image: url("../img/index-bg.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.features__text {
-  line-height: 26px;
-  text-align: center;
-}
-
-.features__text--big {
-  font-weight: bold;
-  font-size: 21px;
-}
-
-.features__list {
-  list-style: none;
-}
-
-.features__item {
-  min-height: 256px;
-
-  text-align: center;
-
-  background-color: #efefef;
-}
-
-.features__item:nth-child(-n+2) {
-  color: #ffffff;
-
-  background-color: #81b3d2;
-}
-
-.features__subheader {
-  font-weight: bold;
-  font-size: 21px;
-}
-
-.promo {
-  list-style: none;
-  color: #000000;
-
-  background-color: #ffffff;
-}
-
-.promo__item {
-  min-height: 330px;
-}
-
-.promo__header {
-  font-weight: bold;
-  font-size: 21px;
-}
-
-.search-hotel {
-  background-color: #ffffff;
-}
-
-.search-hotel__text {
-  line-height: 24px;
-}
-
-.search-hotel__text--big {
-  font-weight: bold;
-  font-size: 30px;
-  line-height: 36px;
-}
-
-.form-search-show {
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 26px;
-  color: #ffffff;
-  text-transform: uppercase;
-
-  background-color: #766357;
-  border: none;
-}
-
-.form-search {
-  font-weight: bold;
-  line-height: 26px;
-}
-
-.form-search__input {
-  background-color: #f2f2f2;
-  border: none;
-}
-
-.form-search__submit {
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 26px;
-  color: #ffffff;
-  text-transform: uppercase;
-
-  background-color: #81b3d2;
-  border: none;
-}
-
 .page-footer {
-  text-align: center;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 120px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #ffffff;
   opacity: 0.9;
 }
@@ -174,23 +114,360 @@ a {
   list-style: none;
 }
 
+.page-footer__social-item {
+  display: inline-block;
+}
+
+.page-footer__social-link {
+  display: block;
+  color: rgba(0, 0, 0, 0);
+  width: 48px;
+  height: 48px;
+  margin-right: 6px;
+  background-color: #82b5d3;
+}
+
+.page-footer__social-link:hover {
+  background-color: #669fc1;
+}
+
+.page-footer__social-link:active {
+  background-color: #5397be;
+  fill: #89b7d2;
+}
+
+.page-footer__social-link--tw {
+  background-image: url("../img/svg/twitter.svg");
+  background-repeat: no-repeat;
+  background-size: 17px 15px;
+  background-position: center;
+}
+
+.page-footer__social-link--fb {
+  background-image: url("../img/svg/fb-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 12px 22px;
+  background-position: center;
+}
+
+.page-footer__social-link--youtube {
+  background-image: url("../img/svg/youtube.svg");
+  background-repeat: no-repeat;
+  background-size: 20px 16px;
+  background-position: center;
+}
+
 .page-footer__copyright {
   font-size: 14px;
   line-height: 26px;
 }
 
+.page-footer__copylink {
+  vertical-align: middle;
+}
+
+/* index.html style */
+.banner {
+  height: 507px;
+  background-image: url("../img/index-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: top -80px center;
+  margin-bottom: 60px;
+}
+
+.banner__intro {
+  position: relative;
+  height: 353px;
+  width: 459px;
+  background-image: url("../img/svg/intro-welcome.svg");
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  top: 76px;
+}
+
+.banner__mask {
+  position: relative;
+  height: 59px;
+  background-image: url("../img/svg/intro-mask.svg");
+  background-repeat: no-repeat;
+  top: 97px;
+}
+
+.features {
+  margin-bottom: 57px;
+}
+
+.features__text {
+  line-height: 26px;
+  text-align: center;
+}
+
+.features__text--big {
+  width: 440px;
+  font-weight: bold;
+  font-size: 21px;
+  margin: 0 auto;
+  margin-bottom: 29px;
+}
+
+.features__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  list-style: none;
+}
+
+.features__item {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 46px;
+  width: 400px;
+  min-height: 143px;
+  background-color: #efefef;
+  padding-top: 50px;
+  padding-bottom: 63px;
+}
+
+.features__item:nth-child(-n+2) {
+  color: #ffffff;
+  background-color: #81b3d2;
+  width: 1200px;
+}
+
+.features__subheader {
+  font-weight: bold;
+  font-size: 21px;
+  width: 120px;
+  margin: 0 auto;
+}
+
+.features__number::before {
+  content: "\2012 ";
+}
+
+.features__number::after {
+  content: " \2012";
+}
+
+.features__description {
+  width: 270px;
+  margin: 0 auto;
+}
+
+.promo {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.promo__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-preferred-size: 400px;
+      flex-basis: 400px;
+  min-height: 330px;
+}
+
+.promo__item--house {
+  background-image: url("../img/svg/icon-1.svg");
+  background-repeat: no-repeat;
+  background-position: center bottom 198px;
+}
+
+.promo__item--food {
+  background-image: url("../img/svg/icon-3.svg");
+  background-repeat: no-repeat;
+  background-position: center bottom 198px;
+}
+
+.promo__item--gift {
+  background-image: url("../img/svg/icon-2.svg");
+  background-repeat: no-repeat;
+  background-position: center bottom 198px;
+}
+
+.promo__header {
+  padding-top: 164px;
+  padding-bottom: 26px;
+  font-weight: bold;
+  font-size: 21px;
+}
+
+.promo__text {
+  width: 290px;
+  margin: 0 auto;
+}
+
+.search-hotel {
+  background-color: #ffffff;
+  text-align: center;
+}
+
+.search-hotel__text {
+  line-height: 24px;
+  width: 435px;
+  margin: auto;
+}
+
+.search-hotel__text--big {
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 36px;
+  margin-bottom: 12px;
+}
+
+.form-search-show {
+  width: 568px;
+  height: 56px;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #766357;
+  border: none;
+  margin-top: 52px;
+}
+
+.form-search-show:hover {
+  background-color: #604d41;
+}
+
+.form-search-show:active {
+  color: #938b86;
+  background-color: #4f3c30;
+}
+
+.form-search {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-weight: bold;
+  line-height: 26px;
+  width: 568px;
+  margin: 0 auto;
+  padding: 55px;
+  -webkit-box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
+          box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
+}
+
+.form-search__row {
+  margin-bottom: 30px;
+}
+
+.form-search__text {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #f2f2f2;
+  border: none;
+  width: 346px;
+  height: 38px;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 26px;
+  padding-left: 12px;
+}
+
+.form-search__text:hover {
+  background-color: #ececec;
+}
+
+.form-search__text:focus {
+  background-color: #ffffff;
+  border: solid 2px #e5e5e5;
+}
+
+.form-search__number {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 26px;
+  text-align: center;
+  width: 38px;
+  height: 38px;
+  border: none;
+  background-color: #f2f2f2;
+}
+
+.form-search__number:hover {
+  background-color: #ececec;
+}
+
+.form-search__number:focus {
+  background-color: #ffffff;
+  border: solid 2px #e5e5e5;
+}
+
+.form-search__submit {
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+  width: 458px;
+  height: 58px;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #81b3d2;
+  border: none;
+  padding: 0;
+}
+
+.form-search__submit:hover {
+  background-color: #669fc1;
+}
+
+.form-search__submit:active {
+  color: #95bad3;
+  background-color: #5397be;
+}
+
 /* catalog.html style*/
 .form-filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   color: #ffffff;
-
   background-color: #81b3d2;
   background-image: url("../img/catalog-bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  padding: 31px 72px;
 }
 
 .form-filter__set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   border: none;
+}
+
+.form-filter__set:nth-child(3) {
+  margin-left: auto;
+  width: 320px;
 }
 
 .form-filter__legend {
@@ -206,8 +483,6 @@ a {
 .form-filter__check {
   font-size: 14px;
   line-height: 21px;
-
-  opacity: 0;
 }
 
 .form-filter__text {
@@ -218,7 +493,6 @@ a {
 .form-filter__submit {
   line-height: 21px;
   text-transform: uppercase;
-
   border: none;
 }
 
@@ -229,16 +503,38 @@ a {
 .sorted-hotel__found {
   font-size: 12px;
   line-height: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 31px 72px;
 }
 
 .sorted-hotel__quantity {
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
+  margin-right: 49px;
+}
+
+.sorted-hotel__sorting {
+  margin-right: 40px;
 }
 
 .sorted-hotel__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   list-style: none;
+}
+
+.sorted-hotel__item:nth-child(2) {
+  margin: 0 33px;
 }
 
 .sorted-hotel__type-sort {
@@ -263,6 +559,32 @@ a {
   text-decoration: none;
 }
 
+.sorted-hotel__direction {
+  margin-left: auto;
+}
+
+.sorted-hotel__arrow {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+}
+
+.sorted-hotel__arrow--up {
+  background-image: url("../img/svg/icon-up-dir.svg");
+}
+
+.sorted-hotel__arrow--down {
+  background-image: url("../img/svg/icon-down-dir.svg");
+}
+
+.sorted-hotel__article {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  padding: 30px 72px;
+}
+
 .sorted-hotel__header {
   font-weight: bold;
   font-size: 21px;
@@ -274,8 +596,10 @@ a {
 }
 
 .sorted-hotel__btn {
+  display: inline-block;
   font-weight: bold;
   color: #ffffff;
+  padding: 8px 16px;
 }
 
 .sorted-hotel__btn--details {
@@ -288,7 +612,6 @@ a {
 
 .sorted-hotel__btn--details:active {
   color: rgba(255, 255, 255, 0.3);
-
   background-color: #5496bd;
 }
 
@@ -302,10 +625,19 @@ a {
 
 .sorted-hotel__btn--book:active {
   color: rgba(255, 255, 255, 0.3);
-
   background-color: #503e33;
 }
 
+.sorted-hotel__star {
+  display: inline-block;
+  height: 18px;
+  width: 18px;
+  background-image: url("../img/svg/star.svg");
+}
+
 .sorted-hotel__text {
+  display: inline-block;
   color: #666666;
+  background-color: #f2f2f2;
+  padding: 5px 15px;
 }
