--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,37 +2,58 @@
 body
   width: 1200px
   margin: 0 auto
-  padding: 0
-
   font-size: 14px
   line-height: 21px
   font-family: "PT Sans", "Arial", sans-serif
   color: #000000
   text-transform: uppercase
-
   background-color: #f2f2f2
+  box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2)
 
 a
   text-decoration: none
 
+.btn
+  cursor: pointer
+
 .visually-hidden
   position: absolute
-
   width: 1px
   height: 1px
   margin: -1px
   overflow: hidden
-
   clip: rect(0 0 0 0)
 
 .page-header
   font-weight: bold
   line-height: 26px
-
   background-color: #ffffff
 
+  &__nav
+
+  &__logo
+    margin: auto
+    position: absolute
+    left: 0
+    right: 0
+
   &__menu-list
+    display: flex
+    flex-wrap: wrap
     list-style: none
+
+  &__menu-item
+    display: flex
+    flex-basis: 240px
+    min-height: 56px
+    align-items: center
+    justify-content: center
+
+    &:nth-child(2)
+      margin-right: auto
+
+    &:nth-child(3)
+      margin-left: auto
 
   &__menu-link:hover
     color: #81b3d2
@@ -46,96 +67,11 @@ a
 .page-main
   background-color: #ffffff
 
-/* index.html style */
-.banner
-  background-image: url("../img/index-bg.jpg")
-  background-repeat: no-repeat
-  background-position: center
-
-.features
-
-  &__text
-    line-height: 26px
-    text-align: center
-
-    &--big
-      font-weight: bold
-      font-size: 21px
-
-    &__list
-    list-style: none
-
-  &__item
-    min-height: 256px
-
-    text-align: center
-
-    background-color: #efefef
-
-    &:nth-child(-n+2)
-      color: #ffffff
-
-      background-color: #81b3d2
-
-    &__subheader
-    font-weight: bold
-    font-size: 21px
-
-.promo
-  list-style: none
-  color: #000000
-
-  background-color: #ffffff
-
-  &__item
-    min-height: 330px
-
-  &__header
-    font-weight: bold
-    font-size: 21px
-
-.search-hotel
-  background-color: #ffffff
-
-  &__text
-    line-height: 24px
-
-    &--big
-      font-weight: bold
-      font-size: 30px
-      line-height: 36px
-
-.form-search-show
-  font-weight: bold
-  font-size: 21px
-  line-height: 26px
-  color: #ffffff
-  text-transform: uppercase
-
-  background-color: #766357
-  border: none
-
-.form-search
-  font-weight: bold
-  line-height: 26px
-
-  &__input
-    background-color: #f2f2f2
-    border: none
-
-  &__submit
-    font-weight: bold
-    font-size: 21px
-    line-height: 26px
-    color: #ffffff
-    text-transform: uppercase
-
-    background-color: #81b3d2
-    border: none
-
 .page-footer
-  text-align: center
-
+  display: flex
+  min-height: 120px
+  justify-content: space-around
+  align-items: center
   background-color: #ffffff
   opacity: 0.9
 
@@ -147,22 +83,290 @@ a
   &__social-list
     list-style: none
 
+  &__social-item
+    display: inline-block
+
+  &__social-link
+    display: block
+    color: rgba(0, 0, 0, 0)
+    width: 48px
+    height: 48px
+    margin-right: 6px
+    background-color: #82b5d3
+
+    &:hover
+      background-color: #669fc1
+
+    &:active
+      background-color: #5397be
+      fill: #89b7d2
+
+    &--tw
+      background-image: url("../img/svg/twitter.svg")
+      background-repeat: no-repeat
+      background-size: 17px 15px
+      background-position: center
+
+    &--fb
+      background-image: url("../img/svg/fb-icon.svg")
+      background-repeat: no-repeat
+      background-size: 12px 22px
+      background-position: center
+
+    &--youtube
+      background-image: url("../img/svg/youtube.svg")
+      background-repeat: no-repeat
+      background-size: 20px 16px
+      background-position: center
+
   &__copyright
     font-size: 14px
     line-height: 26px
 
+  &__copylink
+    vertical-align: middle
 
-  /* catalog.html style*/
-.form-filter
+/* index.html style */
+.banner
+  height: 507px
+  background-image: url("../img/index-bg.jpg")
+  background-repeat: no-repeat
+  background-position: top -80px center
+  margin-bottom: 60px
+
+  &__intro
+    position: relative
+    height: 353px
+    width: 459px
+    background-image: url("../img/svg/intro-welcome.svg")
+    background-repeat: no-repeat
+    margin: 0 auto
+    top: 76px
+
+  &__mask
+    position: relative
+    height: 59px
+    background-image: url("../img/svg/intro-mask.svg")
+    background-repeat: no-repeat
+    top: 97px
+
+.features
+  margin-bottom: 57px
+
+  &__text
+    line-height: 26px
+    text-align: center
+
+    &--big
+      width: 440px
+      font-weight: bold
+      font-size: 21px
+      margin: 0 auto
+      margin-bottom: 29px
+
+  &__list
+    display: flex
+    flex-wrap: wrap
+    list-style: none
+
+  &__item
+    text-align: center
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    padding-top: 46px
+    width: 400px
+    min-height: 143px
+    background-color: #efefef
+    padding-top: 50px
+    padding-bottom: 63px
+
+    &:nth-child(-n+2)
+      color: #ffffff
+      background-color: #81b3d2
+      width: 1200px
+
+  &__subheader
+    font-weight: bold
+    font-size: 21px
+    width: 120px
+    margin: 0 auto
+
+  &__number
+
+
+  &__number::before
+    content: "\2012 "
+
+  &__number::after
+    content: " \2012"
+
+  &__description
+    width: 270px
+    margin: 0 auto
+
+  &__foto
+
+.promo
+  list-style: none
+  display: flex
+  flex-wrap: wrap
+  color: #000000
+  background-color: #ffffff
+
+  &__item
+    display: flex
+    flex-direction: column
+    flex-basis: 400px
+    min-height: 330px
+
+    &--house
+      background-image: url("../img/svg/icon-1.svg")
+      background-repeat: no-repeat
+      background-position: center bottom 198px
+
+    &--food
+      background-image: url("../img/svg/icon-3.svg")
+      background-repeat: no-repeat
+      background-position: center bottom 198px
+
+    &--gift
+      background-image: url("../img/svg/icon-2.svg")
+      background-repeat: no-repeat
+      background-position: center bottom 198px
+
+  &__header
+    padding-top: 164px
+    padding-bottom: 26px
+    font-weight: bold
+    font-size: 21px
+
+  &__text
+    width: 290px
+    margin: 0 auto
+
+.search-hotel
+  background-color: #ffffff
+  text-align: center
+
+  &__text
+    line-height: 24px
+    width: 435px
+    margin: auto
+
+    &--big
+      font-weight: bold
+      font-size: 30px
+      line-height: 36px
+      margin-bottom: 12px
+
+  &__map
+
+.form-search-show
+  width: 568px
+  height: 56px
+  font-weight: bold
+  font-size: 21px
+  line-height: 26px
   color: #ffffff
+  text-transform: uppercase
+  background-color: #766357
+  border: none
+  margin-top: 52px
 
+  &:hover
+    background-color: #604d41
+
+  &:active
+    color: #938b86
+    background-color: #4f3c30
+
+.form-search
+  box-sizing: border-box
+  font-weight: bold
+  line-height: 26px
+  width: 568px
+  margin: 0 auto
+  padding: 55px
+  box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15)
+
+  &__row
+    margin-bottom: 30px
+
+  &__text
+    box-sizing: border-box
+    background-color: #f2f2f2
+    border: none
+    width: 346px
+    height: 38px
+    font-size: 14px
+    font-weight: bold
+    line-height: 26px
+    padding-left: 12px
+
+    &:hover
+      background-color: #ececec
+
+    &:focus
+      background-color: #ffffff
+      border: solid 2px #e5e5e5
+
+  &__number
+    box-sizing: border-box
+    font-size: 14px
+    font-weight: bold
+    line-height: 26px
+    text-align: center
+    width: 38px
+    height: 38px
+    border: none
+    background-color:#f2f2f2
+
+    &:hover
+      background-color: #ececec
+
+    &:focus
+      background-color: #ffffff
+      border: solid 2px #e5e5e5
+
+  &__submit
+    font-weight: bold
+    font-size: 21px
+    line-height: 26px
+    width: 458px
+    height: 58px
+    color: #ffffff
+    text-transform: uppercase
+    background-color: #81b3d2
+    border: none
+    padding: 0
+
+    &:hover
+      background-color: #669fc1
+
+    &:active
+      color: #95bad3
+      background-color: #5397be
+
+
+/* catalog.html style*/
+.form-filter
+  display: flex
+  color: #ffffff
   background-color: #81b3d2
   background-image: url("../img/catalog-bg.jpg")
   background-repeat: no-repeat
   background-position: center
+  padding: 31px 72px
 
   &__set
+    display: flex
+    flex-direction: column
     border: none
+
+    &:nth-child(3)
+      margin-left: auto
+      width: 320px
 
   &__legend
     font-weight: bold
@@ -176,8 +380,6 @@ a
     font-size: 14px
     line-height: 21px
 
-    opacity: 0
-
   &__text
     font-size: 14px
     line-height: 21px
@@ -185,7 +387,6 @@ a
   &__submit
     line-height: 21px
     text-transform: uppercase
-
     border: none
 
 .sorted-hotel
@@ -194,14 +395,26 @@ a
   &__found
     font-size: 12px
     line-height: 18px
+    display: flex
+    align-items: flex-end
+    padding: 31px 72px
 
   &__quantity
     font-weight: bold
     font-size: 21px
     line-height: 26px
+    margin-right: 49px
+
+  &__sorting
+    margin-right: 40px
 
   &__list
+    display: flex
+    align-items: center
     list-style: none
+
+  &__item:nth-child(2)
+    margin: 0 33px
 
   &__type-sort
     color: rgba(0, 0, 0, 0.3)
@@ -219,7 +432,27 @@ a
       color: #81b3d2
       text-decoration: none
 
-    &__header
+  &__direction
+    margin-left: auto
+
+  &__arrow
+    display: inline-block
+    width: 10px
+    height: 10px
+
+    &--up
+      background-image: url("../img/svg/icon-up-dir.svg")
+
+    &--down
+      background-image: url("../img/svg/icon-down-dir.svg")
+
+  &__article
+    box-sizing: border-box
+    border-top: 1px solid #e6e6e6
+    border-bottom: 1px solid #e6e6e6
+    padding: 30px 72px
+
+  &__header
     font-weight: bold
     font-size: 21px
     line-height: 26px
@@ -227,9 +460,13 @@ a
   &__link
     color: #000000
 
+  &__control
+
   &__btn
+    display: inline-block
     font-weight: bold
     color: #ffffff
+    padding: 8px 16px
 
     &--details
       background-color: #81b3d2
@@ -242,7 +479,7 @@ a
 
         background-color: #5496bd
 
-      &--book
+    &--book
       background-color: #766357
 
       &:hover
@@ -253,6 +490,17 @@ a
 
         background-color: #503e33
 
-      &__text
-    color: #666666
+  &__star
+    display: inline-block
+    height: 18px
+    width: 18px
+    background-image: url("../img/svg/star.svg")
 
+    &--five
+
+
+  &__text
+    display: inline-block
+    color: #666666
+    background-color: #f2f2f2
+    padding: 5px 15px
