--- a/css/normalize.css
+++ b/css/normalize.css
@@ -10,13 +10,19 @@
 
 html {
   line-height: 1.15; /* 1 */
-
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
    ========================================================================== */
 
+/**
+ * Remove the margin in all browsers.
+ */
+
+body {
+  margin: 0;
+}
 
 /**
  * Render the `main` element consistently in IE.
@@ -32,9 +38,8 @@ main {
  */
 
 h1 {
-  margin: 0.67em 0;
-
   font-size: 2em;
+  margin: 0.67em 0;
 }
 
 /* Grouping content
@@ -57,8 +62,8 @@ hr {
  */
 
 pre {
-  font-size: 1em; /* 2 */
   font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
@@ -78,10 +83,9 @@ a {
  */
 
 abbr[title] {
+  border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
   text-decoration: underline dotted; /* 2 */
-
-  border-bottom: none; /* 1 */
 }
 
 /**
@@ -101,8 +105,8 @@ strong {
 code,
 kbd,
 samp {
-  font-size: 1em; /* 2 */
   font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
@@ -120,10 +124,9 @@ small {
 
 sub,
 sup {
-  position: relative;
-
   font-size: 75%;
   line-height: 0;
+  position: relative;
   vertical-align: baseline;
 }
 
@@ -159,11 +162,10 @@ input,
 optgroup,
 select,
 textarea {
-  margin: 0; /* 2 */
-
+  font-family: inherit; /* 1 */
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
-  font-family: inherit; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
@@ -172,8 +174,7 @@ textarea {
  */
 
 button,
-input {
-  /* 1 */
+input { /* 1 */
   overflow: visible;
 }
 
@@ -183,8 +184,7 @@ input {
  */
 
 button,
-select {
-  /* 1 */
+select { /* 1 */
   text-transform: none;
 }
 
@@ -207,9 +207,8 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  padding: 0;
-
   border-style: none;
+  padding: 0;
 }
 
 /**
@@ -239,12 +238,11 @@ fieldset {
  */
 
 legend {
-  display: table; /* 1 */
   box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
   max-width: 100%; /* 1 */
   padding: 0; /* 3 */
-
-  color: inherit; /* 2 */
   white-space: normal; /* 1 */
 }
 
@@ -290,9 +288,8 @@ textarea {
  */
 
 [type="search"] {
-  outline-offset: -2px; /* 2 */
-
   -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -309,9 +306,8 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-  font: inherit; /* 2 */
-
   -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
@@ -350,23 +346,4 @@ template {
 
 [hidden] {
   display: none;
-}
-
-ul,
-ol,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-block-end: 0;
-  margin-block-start: 0;
-  margin-inline-end: 0;
-  margin-inline-start: 0;
-  padding-block-end: 0;
-  padding-block-start: 0;
-  padding-inline-end: 0;
-  padding-inline-start: 0;
 }
