--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,9 +10,6 @@ body
   background-color: #f2f2f2
   box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2)
 
-a
-  text-decoration: none
-
 .btn
   cursor: pointer
 
@@ -25,43 +22,48 @@ a
   clip: rect(0 0 0 0)
 
 .page-header
+  position: relative
   font-weight: bold
   line-height: 26px
   background-color: #ffffff
 
-  &__nav
+.page-header__nav
 
-  &__logo
-    margin: auto
-    position: absolute
-    left: 0
-    right: 0
+.page-header__logo
+  margin: auto
+  position: absolute
+  left: 0
+  right: 0
 
-  &__menu-list
-    display: flex
-    flex-wrap: wrap
-    list-style: none
+.page-header__menu-list
+  display: flex
+  flex-wrap: wrap
+  list-style: none
 
-  &__menu-item
-    display: flex
-    flex-basis: 240px
-    min-height: 56px
-    align-items: center
-    justify-content: center
+.page-header__menu-item
+  display: flex
+  flex-basis: 240px
+  min-height: 56px
+  align-items: center
+  justify-content: center
 
-    &:nth-child(2)
-      margin-right: auto
+  &:nth-child(2)
+    margin-right: auto
 
-    &:nth-child(3)
-      margin-left: auto
+  &:nth-child(3)
+    margin-left: auto
 
-  &__menu-link:hover
+.page-header__menu-link
+  color: #000000
+  text-decoration: none
+
+  &:hover
     color: #81b3d2
 
-  &__menu-link:active
+  &:active
     color: rgba(0, 0, 0, 0.3)
 
-  &__menu-link--current
+  &--current
     color: #766357
 
 .page-main
@@ -75,49 +77,44 @@ a
   background-color: #ffffff
   opacity: 0.9
 
-  &__social-hashtag
-    font-weight: bold
-    font-size: 21px
-    line-height: 26px
+.page-footer__social-hashtag
+  font-weight: bold
+  font-size: 21px
+  line-height: 26px
 
-  &__social-list
-    list-style: none
+.page-footer__social-list
 
-  &__social-item
-    display: inline-block
+.page-footer__social-item
+  display: inline-block
 
-  &__social-link
-    display: block
-    color: rgba(0, 0, 0, 0)
-    width: 48px
-    height: 48px
-    margin-right: 6px
-    background-color: #82b5d3
+.page-footer__social-link
+  display: block
+  color: rgba(0, 0, 0, 0)
+  width: 48px
+  height: 48px
+  margin-right: 6px
+  background-color: #82b5d3
+  background-repeat: no-repeat
+  background-position: center
 
-    &:hover
-      background-color: #669fc1
+  &:hover
+    background-color: #669fc1
 
-    &:active
-      background-color: #5397be
-      fill: #89b7d2
+  &:active
+    background-color: #5397be
+    fill: #89b7d2
 
-    &--tw
-      background-image: url("../img/svg/twitter.svg")
-      background-repeat: no-repeat
-      background-size: 17px 15px
-      background-position: center
+  &--tw
+    background-image: url("../img/svg/twitter.svg")
+    background-size: 17px 15px
 
-    &--fb
-      background-image: url("../img/svg/fb-icon.svg")
-      background-repeat: no-repeat
-      background-size: 12px 22px
-      background-position: center
+  &--fb
+    background-image: url("../img/svg/fb-icon.svg")
+    background-size: 12px 22px
 
-    &--youtube
-      background-image: url("../img/svg/youtube.svg")
-      background-repeat: no-repeat
-      background-size: 20px 16px
-      background-position: center
+  &--youtube
+    background-image: url("../img/svg/youtube.svg")
+    background-size: 20px 16px
 
   &__copyright
     font-size: 14px
@@ -136,78 +133,80 @@ a
   background-position: top -80px center
   margin-bottom: 60px
 
-  &__intro
-    position: relative
-    height: 353px
-    width: 459px
-    background-image: url("../img/svg/intro-welcome.svg")
-    background-repeat: no-repeat
-    margin: 0 auto
-    top: 76px
+.banner__intro
+  position: relative
+  height: 353px
+  width: 459px
+  background-image: url("../img/svg/intro-welcome.svg")
+  background-repeat: no-repeat
+  margin: 0 auto
+  top: 76px
 
-  &__mask
-    position: relative
-    height: 59px
-    background-image: url("../img/svg/intro-mask.svg")
-    background-repeat: no-repeat
-    top: 97px
+.banner__mask
+  position: relative
+  height: 59px
+  background-image: url("../img/svg/intro-mask.svg")
+  background-repeat: no-repeat
+  top: 97px
 
 .features
   margin-bottom: 57px
 
-  &__text
-    line-height: 26px
-    text-align: center
+.features__header
+  text-align: center
 
-    &--big
-      width: 440px
-      font-weight: bold
-      font-size: 21px
-      margin: 0 auto
-      margin-bottom: 29px
+.features__text
+  line-height: 26px
+  text-align: center
 
-  &__list
-    display: flex
-    flex-wrap: wrap
-    list-style: none
-
-  &__item
-    text-align: center
-    display: flex
-    flex-direction: column
-    justify-content: space-between
-    padding-top: 46px
-    width: 400px
-    min-height: 143px
-    background-color: #efefef
-    padding-top: 50px
-    padding-bottom: 63px
-
-    &:nth-child(-n+2)
-      color: #ffffff
-      background-color: #81b3d2
-      width: 1200px
-
-  &__subheader
+  &--big
+    width: 440px
     font-weight: bold
     font-size: 21px
-    width: 160px
     margin: 0 auto
+    margin-bottom: 29px
 
-  &__number
+.features__list
+  display: flex
+  flex-wrap: wrap
+  list-style: none
 
+.features__item
+  text-align: center
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  padding-top: 46px
+  width: 400px
+  min-height: 143px
+  background-color: #efefef
+  padding-top: 50px
+  padding-bottom: 63px
 
-  &__number::before
+  &:nth-child(-n+2)
+    color: #ffffff
+    background-color: #81b3d2
+    width: 1200px
+
+.features__subheader
+  font-weight: bold
+  font-size: 21px
+  width: 160px
+  margin: 0 auto
+
+.features__number
+
+  &::before
     content: "\2012 "
 
-  &__number::after
+  &::after
     content: " \2012"
 
-  &__description
+.features__description
     width: 270px
     margin: 0 auto
 
-  &__foto
+.features__foto
 
 .promo
   list-style: none
@@ -216,53 +215,45 @@ a
   color: #000000
   background-color: #ffffff
 
-  &__item
-    display: flex
-    flex-direction: column
-    flex-basis: 400px
-    min-height: 330px
+.promo__item
+  display: flex
+  flex-direction: column
+  flex-basis: 400px
+  min-height: 330px
+  background-repeat: no-repeat
+  background-position: center bottom 198px
 
-    &--house
-      background-image: url("../img/svg/icon-1.svg")
-      background-repeat: no-repeat
-      background-position: center bottom 198px
+  &--house
+    background-image: url("../img/svg/icon-1.svg")
 
-    &--food
-      background-image: url("../img/svg/icon-3.svg")
-      background-repeat: no-repeat
-      background-position: center bottom 198px
+  &--food
+    background-image: url("../img/svg/icon-3.svg")
 
-    &--gift
-      background-image: url("../img/svg/icon-2.svg")
-      background-repeat: no-repeat
-      background-position: center bottom 198px
+  &--gift
+    background-image: url("../img/svg/icon-2.svg")
 
-  &__header
-    padding-top: 164px
-    padding-bottom: 26px
-    font-weight: bold
-    font-size: 21px
+.promo__header
+  padding-top: 164px
+  padding-bottom: 26px
+  font-weight: bold
+  font-size: 21px
 
-  &__text
-    width: 290px
-    margin: 0 auto
+.promo__text
+  width: 290px
+  margin: 0 auto
 
 .search-hotel
   background-color: #ffffff
   text-align: center
 
-  &__text
-    line-height: 24px
-    width: 435px
-    margin: auto
+.search-hotel__header
 
-    &--big
-      font-weight: bold
-      font-size: 30px
-      line-height: 36px
-      margin-bottom: 12px
+.search-hotel__text
+  line-height: 24px
+  width: 435px
+  margin: auto
 
-  &__map
+.search-hotel__map
 
 .form-search-show
   width: 568px
@@ -292,63 +283,63 @@ a
   padding: 55px
   box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15)
 
-  &__row
-    margin-bottom: 30px
+.form-search__row
+  margin-bottom: 30px
 
-  &__text
-    box-sizing: border-box
-    background-color: #f2f2f2
-    border: none
-    width: 346px
-    height: 38px
-    font-size: 14px
-    font-weight: bold
-    line-height: 26px
-    padding-left: 12px
+.form-search__text
+  box-sizing: border-box
+  background-color: #f2f2f2
+  border: none
+  width: 346px
+  height: 38px
+  font-size: 14px
+  font-weight: bold
+  line-height: 26px
+  padding-left: 12px
 
-    &:hover
-      background-color: #ececec
+  &:hover
+    background-color: #ececec
 
-    &:focus
-      background-color: #ffffff
-      border: solid 2px #e5e5e5
+  &:focus
+    background-color: #ffffff
+    border: solid 2px #e5e5e5
 
-  &__number
-    box-sizing: border-box
-    font-size: 14px
-    font-weight: bold
-    line-height: 26px
-    text-align: center
-    width: 38px
-    height: 38px
-    border: none
-    background-color:#f2f2f2
+.form-search__number
+  box-sizing: border-box
+  font-size: 14px
+  font-weight: bold
+  line-height: 26px
+  text-align: center
+  width: 38px
+  height: 38px
+  border: none
+  background-color:#f2f2f2
 
-    &:hover
-      background-color: #ececec
+  &:hover
+    background-color: #ececec
 
-    &:focus
-      background-color: #ffffff
-      border: solid 2px #e5e5e5
+  &:focus
+    background-color: #ffffff
+    border: solid 2px #e5e5e5
 
-  &__submit
-    font-weight: bold
-    font-size: 21px
-    line-height: 26px
-    width: 458px
-    height: 58px
-    color: #ffffff
-    text-transform: uppercase
-    background-color: #81b3d2
-    border: none
-    padding: 0
+.form-search__submit
+  font-weight: bold
+  font-size: 21px
+  line-height: 26px
+  width: 458px
+  height: 58px
+  color: #ffffff
+  text-transform: uppercase
+  background-color: #81b3d2
+  border: none
+  padding: 0
 
-    &:hover
-      background-color: #669fc1
+  &:hover
+    background-color: #669fc1
 
-    &:active
-      color: #95bad3
-      background-color: #5397be
+  &:active
+    color: #95bad3
+    background-color: #5397be
 
 
 /* catalog.html style*/
@@ -361,151 +352,150 @@ a
   background-position: center
   padding: 31px 72px
 
-  &__set
-    display: flex
-    flex-direction: column
-    border: none
+.form-filter__set
+  display: flex
+  flex-direction: column
+  border: none
 
-    &:nth-child(3)
-      margin-left: auto
-      width: 320px
+  &:nth-child(3)
+    margin-left: auto
+    width: 320px
 
-  &__legend
-    font-weight: bold
-    font-size: 16px
+.form-filter__legend
+  font-weight: bold
+  font-size: 16px
 
-  &__row
-    font-size: 14px
-    line-height: 21px
+.form-filter__row
+  font-size: 14px
+  line-height: 21px
 
-  &__check
-    font-size: 14px
-    line-height: 21px
+.form-filter__check
+  font-size: 14px
+  line-height: 21px
 
-  &__text
-    font-size: 14px
-    line-height: 21px
+.form-filter__text
+  font-size: 14px
+  line-height: 21px
 
-  &__submit
-    line-height: 21px
-    text-transform: uppercase
-    border: none
+.form-filter__submit
+  line-height: 21px
+  text-transform: uppercase
+  border: none
 
 .sorted-hotel
   color: #000000
   display: flex
   flex-direction: column
 
-  &__found
-    font-size: 12px
-    line-height: 18px
-    display: flex
-    align-items: flex-end
-    margin: 31px 72px
+.sorted-hotel__found
+  font-size: 12px
+  line-height: 18px
+  display: flex
+  align-items: flex-end
+  margin: 31px 72px
 
-  &__quantity
-    font-weight: bold
-    font-size: 21px
-    line-height: 26px
-    margin-right: 49px
+.sorted-hotel__quantity
+  font-weight: bold
+  font-size: 21px
+  line-height: 26px
+  margin-right: 49px
 
-  &__sorting
-    margin-right: 40px
+.sorted-hotel__sorting
+  margin-right: 40px
 
-  &__list
-    display: flex
-    align-items: center
-    list-style: none
+.sorted-hotel__list
+  display: flex
+  align-items: center
+  list-style: none
 
-  &__item:nth-child(2)
+.sorted-hotel__item
+
+  &:nth-child(2)
     margin: 0 33px
 
-  &__type-sort
-    color: rgba(0, 0, 0, 0.3)
+.sorted-hotel__type-sort
+  color: rgba(0, 0, 0, 0.3)
+  text-decoration: underline dotted #81b3d2
+
+  &:hover
+    color: #81b3d2
     text-decoration: underline dotted #81b3d2
 
+  &:active
+    color: #000000
+    text-decoration: none
+
+  &--active
+    color: #81b3d2
+    text-decoration: none
+
+.sorted-hotel__direction
+  margin-left: auto
+
+.sorted-hotel__arrow
+  display: inline-block
+  width: 10px
+  height: 10px
+
+  &--up
+    background-image: url("../img/svg/icon-up-dir.svg")
+
+  &--down
+    margin-left: 12px
+    background-image: url("../img/svg/icon-down-dir.svg")
+
+.sorted-hotel__article
+  box-sizing: border-box
+  border-top: 1px solid #e6e6e6
+  border-bottom: 1px solid #e6e6e6
+  padding: 31px 72px
+
+.sorted-hotel__header
+  font-weight: bold
+  font-size: 21px
+  line-height: 26px
+
+.sorted-hotel__link
+  color: #000000
+
+.sorted-hotel__control
+
+.sorted-hotel__btn
+  display: inline-block
+  font-weight: bold
+  color: #ffffff
+  padding: 8px 16px
+
+  &--details
+    background-color: #81b3d2
+
     &:hover
-      color: #81b3d2
-      text-decoration: underline dotted #81b3d2
+      background-color: #669ec0
 
     &:active
-      color: #000000
-      text-decoration: none
+      color: rgba(255, 255, 255, 0.3)
+      background-color: #5496bd
 
-    &--active
-      color: #81b3d2
-      text-decoration: none
+  &--book
+    background-color: #766357
 
-  &__direction
-    margin-left: auto
+    &:hover
+      background-color: #604e43
 
-  &__arrow
-    display: inline-block
-    width: 10px
-    height: 10px
+    &:active
+      color: rgba(255, 255, 255, 0.3)
+      background-color: #503e33
 
-    &--up
-      background-image: url("../img/svg/icon-up-dir.svg")
+.sorted-hotel__star
+  display: inline-block
+  height: 18px
+  width: 18px
+  background-image: url("../img/svg/star.svg")
 
-    &--down
-      margin-left: 12px
-      background-image: url("../img/svg/icon-down-dir.svg")
+  &--five
 
-  &__article
-    box-sizing: border-box
-    border-top: 1px solid #e6e6e6
-    border-bottom: 1px solid #e6e6e6
-    padding: 31px 72px
-
-  &__header
-    font-weight: bold
-    font-size: 21px
-    line-height: 26px
-
-  &__link
-    color: #000000
-
-  &__control
-
-  &__btn
-    display: inline-block
-    font-weight: bold
-    color: #ffffff
-    padding: 8px 16px
-
-    &--details
-      background-color: #81b3d2
-
-      &:hover
-        background-color: #669ec0
-
-      &:active
-        color: rgba(255, 255, 255, 0.3)
-
-        background-color: #5496bd
-
-    &--book
-      background-color: #766357
-
-      &:hover
-        background-color: #604e43
-
-      &:active
-        color: rgba(255, 255, 255, 0.3)
-
-        background-color: #503e33
-
-  &__star
-    display: inline-block
-    height: 18px
-    width: 18px
-    background-image: url("../img/svg/star.svg")
-
-    &--five
-
-
-  &__text
-    display: inline-block
-    color: #666666
-    background-color: #f2f2f2
-    padding: 5px 15px
+.sorted-hotel__text
+  display: inline-block
+  color: #666666
+  background-color: #f2f2f2
+  padding: 5px 15px
